# qarm-hack

./: .gitignore  README.md  pyproject.toml
api/: factory.py  mirrored_qarm.py
common/: __init__.py  qarm_base.py
demos/: README.md  gamepad_multi_hoops.py  keyboard_control.py  keyboard_multi_hoops.py  multi_hoop_segments.py  pick_and_place.py
docs/: URDF.md  python-install.md
examples/: __init__.py  pick_and_place_demo.py
hardware/: __init__.py  real_qarm.py
qarm/meshes/: QarmBase.stl
qarm/urdf/: QARM.urdf
qarm_gripper_new/: CMakeLists.txt  package.xml
qarm_gripper_new/launch/: display_robot.launch.py  robot.launch.py
qarm_gripper_new/meshes/: Qarm.stl  baselink.stl  dan.stl  link1a 2.stl  link1a 3.stl  link1a 4.stl  link1a.stl  link1b.stl  link2a.stl  link2b.stl
qarm_gripper_new/urdf/: robot.urdf
sim/: __init__.py  actual_sim.py  assets.py  bootstrap.py  env.py  panda_viewer.py  qt_panel.py  run_gui.py  sim_qarm.py  test_sim.py
sim/models/: blueaccent.stl  greenaccent.stl  pinebase.stl  pinebase_collision.stl
sim/qarm/meshes/: gripper-base.stl  gripper-link1a.stl  gripper-link1b.stl  gripper-link2a.stl  gripper-link2b.stl
sim/qarm/urdf/: QARM.urdf
student_template/: README.md  student_gamepad_object.py  student_main.py  student_object.py
